<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Redeactiva</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="des_rutina">Botón Mi Rutina</string>
    <string name="des_deportes">Botón Deportes</string>
    <string name="des_actrec">Botón Actividades Recreativas</string>
    <string name="desc_entrenamiento">Botón Entrenamiento</string>
    <string name="desc_deportistas">Botón Deportistas</string>
    <string name="desc_compartir">Botón Compartir</string>
    <string name="desc_perfil">Botón Perfil</string>
    <string name="desc_eventos">Botón Eventos</string>
    <string name="ur_servicio">http://190.248.53.209/redeactiva/index.php</string>
    <string name="ur_servicio2">http://190.248.53.209/redeactiva</string>
    <string name="title_activity_deportes">Deportes</string>
    <string name="str_federaciones">Federaciones</string>
    <string name="title_activity_detalle_deporte">Detalle Deporte</string>
    <string name="str_reglamento">Reglamento</string>
    <string name="str_galerias">Galerías</string>
    <string name="title_activity_galerias">Galerias</string>
    <string name="title_activity_reglamento">Reglamento</string>
    <string name="title_activity_federaciones">Federaciones</string>
    <string name="title_activity_recreativas">Recreativas</string>
    <string name="title_activity_detalle_recreativa">Detalle Act. Recreativa</string>
    <string name="title_activity_gelerias_recreacion">Gelería Recreación</string>
    <string name="title_activity_reglamento_recreativa">Reglamento Act. Recreativa</string>
    <string name="title_activity_main">Inicio</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_entrenamiento">Videos Motivacionales</string>
    <string name="str_frase_d">Frase del día:</string>
    <string name="str_reto">Reto de la semana:</string>
    <string name="title_activity_rutinas">Rutinas</string>
    <string name="title_activity_nueva_rutina">Nueva Rutina</string>
    <string name="str_titulo_rutina">Titulo de la Rutina</string>
    <string name="str_dias">Seleccione los días de la semana de su ritina</string>
    <string name="str_lunes">Lunes</string>
    <string name="str_martes">Martes</string>
    <string name="str_miercoles">Miercoles</string>
    <string name="str_jueves">Jueves</string>
    <string name="str_viernes">Viernes</string>
    <string name="str_sabado">Sábado</string>
    <string name="str_domingo">Domingo</string>
    <string name="str_hora">Seleccione la hora de su rina. Tenga en cuenta que se le notificará media hora antes</string>
    <string name="str_crear_rutina">Crear Rutina de Entremiento</string>
    <string name="hint_titulo_rutina">Escriba aquí su rutina</string>
    <string name="title_activity_editar_rutina">Editar Rutina</string>
    <string name="str_editar_rutina">Guardar Rutina</string>
    <string name="str_eliminar">Eliminar Rutina</string>
    <string name="title_activity_historias">Historias</string>
    <string name="title_activity_nueva_historia">Nueva Historia</string>
    <string name="str_capturar">Tomar una foto</string>
    <string name="str_guardar">Guardar Historia</string>
    <string name="title_activity_eventos">Eventos</string>
    <string name="str_titulo_evento">"Título del Evento: "</string>
    <string name="str_horario">"Horario: "</string>
    <string name="str_costo">"Costo: "</string>
    <string name="str_direccion">"Dirección: "</string>
    <string name="str_telefono">"Teléfono: "</string>
    <string name="title_activity_mapa_eventos">Mapa Eventos</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="str_email_perfil">"Su Email: "</string>
    <string name="str_pass">"Ingrese su Contraseña: "</string>
    <string name="str_guardar_perfil">Guardar</string>
    <string name="str_entrar">Iniciar Sesión</string>
    <string name="str_registrese">Registrese</string>
    <string name="str_recovery">Recuperar Contraseña</string>
    <string name="title_activity_registro">Registro</string>
    <string name="title_activity_recovery">Recovery</string>
    <string name="str_salir">Cerrar Sesión</string>
    <string name="str_no_rutinas">Usted no ha creado ninguna rutina.</string>
    <string name="cd_foto">Foto</string>
    <string name="str_sitiow">Sitio Web</string>
    <string name="str_tipo_evento">"Tipo de Evento: "</string>
    <string name="str_entidad">Entidad: </string>
    <string name="str_clase">"Clase de evento: "</string>
    <string name="title_activity_entrenamiento_menu">Entrenamiento</string>
    <string name="ver_videos">Ver Videos Motivacionales</string>
    <string name="txt_frase_dia">Ver Frase del día</string>
    <string name="txt_frase_reto">Ver Reto de la semana</string>
    <string name="title_activity_frases">Frases</string>
    <string name="descripcion_perfil">En esta sección usted podrá modificar su contraseña.</string>
    <string name="confirm_pass">"Ingrese nuevamente su contraseña para confirmar: "</string>
    <string name="salir_str">Cerrar Sesión</string>
    <string name="title_activity_splash">Splash</string>
    <string name="title_activity_about">Acerca de</string>
    <string name="app_title">Redeactiva</string>
    <string name="version">V. 1.0</string>
    <string name="coldeportes">Coldeportes</string>
    <string name="copy">&#169; 2015 - Derechos reservados. Tenga en cuenta que esta aplicación requiere acceso a internet y puede consumir recursos de su plan de datos.</string>

</resources>
