<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NuevaHistoria" >

    <ScrollView
        android:id="@+id/sv_nhistoria"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_foto"
                android:visibility="gone" />

            <EditText
                android:id="@+id/et_titulo"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:inputType="textMultiLine" >

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/btn_captura"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_bg"
                android:text="@string/str_capturar"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btn_guardar"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="@drawable/btn_bg"
                android:enabled="false"
                android:text="@string/str_guardar"
                android:textColor="#fff" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/loading"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>
